# starting-ragchatbot-codebase

./: CLAUDE.md  QUALITY_TOOLS.md  frontend-changes.md  pyproject.toml
.claude/: settings.local.json
backend/: ai_generator.py  app.py  config.py  search_tools.py  vector_store.py
backend/tests/: PROPOSED_FIXES.md  README.md  TEST_RESULTS.md  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_rag_system.py  test_search_tool.py  test_vector_store.py
frontend/: .eslintrc.json  .prettierignore  .prettierrc.json  index.html  package.json  script.js  style.css
scripts/: format.sh  frontend-format.sh  frontend-lint.sh  lint.sh  quality-check.sh  typecheck.sh
